# Finance-Terminal

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agents.yaml  models.yaml
src/finterminal/: __init__.py  commands.py  commands_features.py  config.py  terminal.py
src/finterminal/agents/: _dossier.py  analyst.py  analyze_flow.py  base.py  critic.py  data.py  news_trend.py  supervisor.py
src/finterminal/data/: duckdb_store.py  finnhub_client.py  news_store.py  (+2 more)
tests/: test_mgmt_claims.py  test_nse_quote.py  test_panels_markup_escape.py  test_pipeline_isolation.py  test_quote_fallthrough.py  test_smoke.py
tests/agents/: test_analyst_agent.py  test_analyst_prompt_rules.py  test_analyze_flow.py  test_base.py  test_baseline_present.py  test_commands_analyze.py  test_critic.py  test_critic_prompt_rules.py  test_data_agent.py  test_dossier.py  test_news_trend_agent.py  test_ollama_provider.py  test_panels_critic.py  test_persistence.py  test_provider_cache_kwarg.py  test_tag_discipline.py
tests/commands/: test_trends_cmd.py
tests/data/: test_news_pipeline_migration.py  test_nse_universe.py
tests/features/: test_atomicity.py  test_compute_news.py  test_compute_price.py  test_compute_quality.py  test_compute_reflexivity.py  test_compute_regime.py  test_freshness.py  test_orchestrator.py  test_registry.py  test_store.py  test_zscore.py
tests/fixtures/: nse_quote_RELIANCE.json
tests/integration/: test_features_e2e.py  test_foundation_e2e.py
tests/market_data/: test_bhavcopy.py  test_calendar.py  test_http.py  test_indices.py  test_ingestion.py  test_macro.py  test_normalize.py  test_store.py
tests/news/: test_cluster.py  test_collector.py  test_dedupe.py  test_embedder.py  test_lineage.py  test_pipeline.py  test_tagger.py
tests/outcomes/: test_backfill.py  test_backfill_historical.py  test_ledger.py  test_queries.py  test_schema.py  test_wiring.py
(+64 files in other folders)
