[project]
name = "finterminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ajinkya Wagh", email = "ajinkyawagh25@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.8",
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "openai>=1.60.0",
    "openbb>=4.7.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "textual>=8.2.4",
    "sentence-transformers>=3.0.0",
    "datasketch>=1.6.0",
    "rapidfuzz>=3.0.0",
    "scipy>=1.13.0",
    "numpy>=2.0.0",
    "vaderSentiment>=3.3.2",
]

[project.scripts]
finterminal = "finterminal:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
